# rag-multimodal-demo

./: Makefile  README.md
apps/rag/: .env.example  pyproject.toml
apps/rag/src/rag/: __init__.py  caption_vlm.py  chunking.py  context.py  ingest_pdf.py  main.py  retrieval.py
apps/server/: .env.example  pyproject.toml
apps/server/src/app/: caption_vlm.py  db.py  embeddings.py  main.py  retrieval.py
apps/web/app/pages/: index.vue
infra/: docker-compose.yml
infra/initdb/: 01_init.sql
scripts/: ingest_pdf.py
