[project]
name = "rag-server"
version = "0.1.0"
description = "Multimodal RAG PoC backend"
authors = [
    {name = "go-fireball",email = "venkatachalapatee@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "openai (>=1.106.1,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pdfplumber (>=0.11.7,<0.12.0)",
    "fitz (>=0.0.1.dev2,<0.0.2)"
]

[tool.poetry]
packages = [{include = "server", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
